# SynergyScript

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: fibonacci.corp  hello.corp  per_my_last_email.corp  q3_earnings.corp
src/synergyscript/: __init__.py  __main__.py  ast_nodes.py  builtins.py  cli.py  environment.py  errors.py  interpreter.py  keywords.py  lexer.py  linter.py  parser.py  tokens.py
tests/: conftest.py  test_builtins.py  test_environment.py  test_interpreter.py  test_keywords.py  test_last_email.py  test_lexer.py  test_linter.py  test_parser.py
